# gecko

./: .gitignore  .hgignore  import-activity-stream.sh  moz.build  package-lock.json  package.json
.cargo/: config.in
browser/actors/: AboutNewTabChild.jsm  AboutPrivateBrowsingChild.jsm
browser/base/content/: browser.js  browser.xhtml  spotlight.html  tabbrowser.js
browser/components/: BrowserGlue.jsm
browser/components/about/: AboutRedirector.cpp
browser/components/newtab/: AboutNewTabService.jsm  jar.mn  karma.mc.config.js  metrics.yaml  moz.build  package-lock.json  package.json  pings.yaml  webpack.devtools.config.js  webpack.system-addon.config.js  yamscripts.yml
browser/components/places/: Interactions.sys.mjs
browser/components/preferences/: moreFromMozilla.inc.xhtml  moreFromMozilla.js  preferences.xhtml
browser/modules/: BrowserWindowTracker.jsm
docs/: config.yml
docshell/base/: BrowsingContext.cpp  BrowsingContextGroup.cpp  nsDocShell.cpp
dom/base/: nsFrameLoader.cpp
dom/chrome-webidl/: Nimbus.webidl  moz.build
dom/ipc/: BrowserChild.cpp
dom/security/: nsContentSecurityManager.cpp
services/settings/: RemoteSettingsClient.jsm  Utils.jsm
testing/mochitest/: browser-test.js
toolkit/: moz.configure
toolkit/components/: moz.build
toolkit/modules/: SubDialog.jsm
toolkit/mozapps/defaultagent/rust/: Cargo.toml
tools/: moz.build
tools/docs/: config.yml
tools/esmify/: mach_commands.py  map.json
tools/rewriting/: ThirdPartyPaths.txt
widget/: ContentCache.cpp
xpfe/appshell/: nsContentTreeOwner.cpp
(+118 files in other folders)
