[package]
name = "defaultagent-static"
version = "0.1.0"
authors = ["The Mozilla Install/Update Team <install-update@mozilla.com>"]
edition = "2018"
description = "FFI to Rust for use in Firefox's default browser agent."
repository = "https://github.com/mozilla/defaultagent-static"
license = "MPL-2.0"

[dependencies]
log = { version = "0.4", features = ["std"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1"
viaduct = { git = "https://github.com/mozilla/application-services", rev = "2478bcf2b48d1867b01e8b7df4f86a69d564d49a"}
wineventlog = { path = "../../../components/updateagent/wineventlog"}
wio = "0.2"
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "minwindef", "winerror", "wininet", "winuser"] }

[lib]
crate-type = ["staticlib"]
